syntax = "proto3";

package speechly.identity.v1;

option go_package = "speechly/identity/v1;identityv1";
option java_package = "com.speechly.api.identity.v1";

// Service that implements Speechly Identity API (https://speechly.com/docs/api/identity).
//
// This service is used for generating access token for Speechly SLU API.
service Identity {
  // Performs a login of specific Speechly application.
  // Returns an access token, that can be used to access Speechly SLU API.
  rpc Login(LoginRequest) returns (LoginResponse);
}

// Top-level message sent by the client for the `Login` method.
message LoginRequest {
  // A unique end-user device identifier.
  // Required.
  string device_id = 1;

  // Speechly application ID.
  // Required.
  string app_id = 2;

  // The language to use.
  // Must be a supported BCP-47 language code, eg. 'en-US'.
  // Defaults to the application's language.
  string language_code = 3;

  // Define a specific model configuration to use.
  // Defaults to the application's latest configuration.
  string config_id = 4;
}

// Top-level message sent by the server for the `Login` method.
message LoginResponse {
  // Access token which can used for Speechly SLU API.
  // The token is a JSON Web Token and includes all standard claims, as well as custom ones.
  // The token has expiration, so you should check whether it has expired before using it.
  // It is safe to cache the token for future use until its expiration date.
  string token = 1;
}
